--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
 body {
-    width: 900px;
-    max-width: 1000px;
     margin: 0 auto;
 }
 
@@ -10,13 +8,35 @@ header {
 
 nav > ul {
     list-style: none;
+    margin-top: 30px;
 }
 nav ul li {
     display: inline-block;
+    padding-right: 10px;
 }
 ul li a {
     text-decoration: none;
     color: white;
+}
+
+h3 {
+    margin-bottom: 10px;
+}
+
+h3 span {
+    font-size: 10px;
+    color: blue;
+    margin: 10px;
+}
+
+.logo {
+    width: 70px;
+}
+
+.banner {
+    background-color: #e6e6e6;
+    padding: 10px 10px;
+    margin-bottom: 30px;
 }
 
 .banner img {
@@ -25,6 +45,26 @@ ul li a {
 
 .col-2 img {
     max-width: 100%;
+}
+
+.titulo {
+    color: blue;
+}
+
+.lista {
+    margin: 30px;
+}
+.sub-title {
+    color: blue;
+    font-size: 10px;
+}
+
+.lista .col-2 {
+    margin-bottom: 14px;
+}
+.lista .col-2 img {
+    padding: 2px;
+    border: 1px solid gray;
 }
 
 .footercontainer {
